--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -1,32 +1,32 @@
 [versions]
-activity-compose = "1.9.3"
-androidx-appcompat = "1.7.0"
-androidx-core = "1.15.0"
-compose = "1.7.5"
-compose-navigation = "2.8.4"
-core = "1.6.1"
+activity-compose = "1.12.3"
+androidx-appcompat = "1.7.1"
+androidx-core = "1.17.0"
+compose = "1.10.2"
+compose-navigation = "2.9.7"
+core = "1.7.0"
 core-animation = "1.0.0"
-coroutines = "1.9.0"
-datastore = "1.1.1"
+coroutines = "1.10.2"
+datastore = "1.2.0"
 glance = "1.1.1"
-gradle = "8.7.2"
-hilt = "2.52"
-hilt-androidx = "1.2.0"
+gradle = "9.0.0"
+hilt = "2.59"
+hilt-androidx = "1.3.0"
 junit = "4.13.2"
-kotlin = "2.0.21"
-kotlin-gradle-plugin = "2.0.21"
-kotlinx-coroutines-test = "1.8.1"
-ksp = "2.0.21-1.0.28"
-lifecycle-runtime = "2.8.7"
-material = "1.12.0"
-mockk = "1.13.13"
-okhttp-logging = "4.12.0"
-retrofit = "2.11.0"
-room = "2.6.1"
+kotlin = "2.3.0"
+kotlinx-coroutines-test = "1.10.2"
+ksp = "2.3.4"
+lifecycle-runtime = "2.10.0"
+material = "1.13.0"
+material-icons = "1.7.8"
+mockk = "1.14.9"
+okhttp-logging = "5.3.2"
+retrofit = "3.0.0"
+room = "2.8.4"
 timber = "5.0.1"
-truth = "1.4.4"
-ui-test-manifest = "1.7.5"
-work-runtime = "2.10.0"
+truth = "1.4.5"
+ui-test-manifest = "1.10.2"
+work-runtime = "2.11.1"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
@@ -34,10 +34,10 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 androidx-core = { module = "androidx.test:core", version.ref = "core" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
 androidx-hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hilt-androidx" }
-androidx-test-junit = { group = "androidx.test.ext", name = "junit", version = "1.2.1" }
+androidx-test-junit = { group = "androidx.test.ext", name = "junit", version = "1.3.0" }
 androidx-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "ui-test-manifest" }
 compose-material = { group = "androidx.compose.material", name = "material", version.ref = "compose" }
-compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose" }
+compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "material-icons" } # remove?
 compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "compose-navigation" }
 compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
 compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version.ref = "compose" }
@@ -54,9 +54,9 @@ hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.r
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-androidx" }
 hilt-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hilt-androidx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin-gradle-plugin" }
+kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines-test" }
-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version = "2.8.7" }
+lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version = "2.10.0" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
