--- a/backend/ktor-kwiatonomous/gradle.properties
+++ b/backend/ktor-kwiatonomous/gradle.properties
@@ -1,6 +1,7 @@
 ktorVersion=3.4.0
-kotlinVersion=2.2.0
+kotlinVersion=2.3.10
 logbackVersion=1.5.32
 koinVersion=4.1.0
+kotlinCliVersion=0.3.6
 exposedVersion=1.1.1
 kotlin.code.style=official
